# persona-modality

./: LICENSE  README.md  pyproject.toml
output/: refusal-example.json  responses-example.json  rubric-example.json
src/: main.py
src/datasets/: evaluation-set.json  full-dataset.json
src/datasets/misc/: personas.py  questions.json  scenarios.json
