[tool.poetry]
name = "persona-modality"
version = "0.1.0"
description = "A pipeline for evaluating persona modality bias by multimodal LLMs"
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "*"
tqdm = "^4.66.5"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
litellm = "*"      
llm_guard = "*"
spacy = ">=3.4.4,<4.0.0"
torch = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
